new changes on footer and css files

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -7,3 +7,11 @@
 .about-grid img{
     width: 100%;
 }
+@media (max-width: 48em) {
+    .about-grid{
+      display: block;
+    }
+    .about-grid h2{
+        margin-top: 2rem;
+    }
+  }
