--- a/src/components/works/Work.css
+++ b/src/components/works/Work.css
@@ -125,9 +125,7 @@
       height: auto;
     }
   }
-  
-  
-  
+
 /* Tab Navigation */
 ul.nav { 
   width: 60%; 
@@ -137,6 +135,7 @@ ul.nav {
   justify-content: space-between; 
   border: 1px solid #A5B7C1; 
   border-radius: 2rem;
+  margin-top: 3rem;
 }
 ul.nav li { 
   width: 50%; 
