new changes on App css file

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,22 @@
 a{
   text-decoration: none;
 }
-
+.hypen1{
+  color: #00D2DF;
+  font-weight: bolder;
+}
+.hypen2{
+  color: #FFE70B;
+  font-weight: bolder;
+}
+.hypen3{
+  color: #0BFF7B;
+  font-weight: bolder;
+}
+.hypen4{
+  color: #FF0B45;
+  font-weight: bolder;
+}
 @media (max-width: 48em) {
 .App {
   padding-left: 1rem;
